fix spacing between footer and registration form

--- a/keycloak/themes/hmda/login/resources/css/hmda.css
+++ b/keycloak/themes/hmda/login/resources/css/hmda.css
@@ -11,6 +11,8 @@ h6,
 }
 
 .usa-grid-small {
+  margin-top: 4em;
+  padding-bottom: 4em;
   max-width: 450px;
 }
 
